objects/BMCServiceDesk__BMC_Cluster__c.object
<CustomObject>
    <description>BMC_Cluster. CMDB Class that stores information about groups of two or more computer systems (clusters) or applications that operate together as a functional whole to increase the performance or resources of the BMC_System component. Use the BMC_Cluster class to classify or update groups of software or hardware to maintain and improve the reliability, serviceability, and availability of your operating-system environment.  For example, an accounting department might create a cluster and link it with relationships to specific computer systems to obtain a complete picture of their business environment and assess the performance of computers individually and collectively. To do so, they could use the BMC_Component relationship to connect Computer A, Computer B, and Computer C to a performance measurement CI in the BMC_Cluster class.  This class corresponds to the DMTF class CIM_Cluster.</description>
    <fields>
        <fullName>BMCServiceDesk__ClusterType__c</fullName>
        <label>Cluster Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software Cluster</fullName>
                </value>
                <value>
                    <fullName>Hardware Cluster</fullName>
                </value>
                <value>
                    <fullName>SoftwareServerCluster</fullName>
                </value>
                <value>
                    <fullName>ApplicationInstanceCluster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InterconnectAddress__c</fullName>
        <label>Interconnect Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Interconnect__c</fullName>
        <label>Interconnect</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfNodes__c</fullName>
        <label>Maximum Number Of Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Types__c</fullName>
        <label>Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Cluster</label>
    <nameField>
        <label>BMC_Cluster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>